@@ -63,7 +63,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkImageMenuItem" id="previous_track">
+		    <widget class="GtkImageMenuItem" id="previous_track_menuitem">
 		      <property name="visible">True</property>
 		      <property name="tooltip" translatable="yes">Skip to the previous track</property>
 		      <property name="label" translatable="yes">Pre_vious Track</property>
@@ -86,7 +86,7 @@
 		  </child>
 
 		  <child>
-		    <widget class="GtkImageMenuItem" id="next_track">
+		    <widget class="GtkImageMenuItem" id="next_track_menuitem">
 		      <property name="visible">True</property>
 		      <property name="tooltip" translatable="yes">Skip to the next track</property>
 		      <property name="label" translatable="yes">_Next Track</property>
