@@ -47,6 +47,8 @@ static gfloat vol = 1.0;
 
 static GtkTreeIter current_iter;
 
+static GtkWidget *play_button, *next_menuitem, *prev_menuitem, *seek_scale, *volume_button, *statusbar;
+
 /**
  * Select track number.
  */
@@ -123,6 +125,9 @@ stop (void)
 {
   if (pipeline != NULL)
     gst_element_set_state (pipeline, GST_STATE_NULL);
+
+  gtk_widget_set_sensitive (next_menuitem, FALSE);
+  gtk_widget_set_sensitive (prev_menuitem, FALSE);
 }
 
 /**
@@ -222,7 +227,6 @@ get_label_for_time (gint sec)
 static void
 set_statusbar_pos (gint pos, gint len)
 {
-  static GtkStatusbar *status = NULL;
   static gint prev_pos = 0, prev_len = 0;
   gchar *x, *y, *r;
 
@@ -237,17 +241,13 @@ set_statusbar_pos (gint pos, gint len)
   g_free (x);
   g_free (y);
 
-  if (status == NULL) {
-    status = GTK_STATUSBAR (glade_xml_get_widget (glade, "status_bar"));
-  }
-  gtk_statusbar_push (status, 0, r);
+  gtk_statusbar_push (GTK_STATUSBAR (statusbar), 0, r);
   g_free (r);
 }
 
 static gboolean
 cb_set_time (gpointer data)
 {
-  GtkWidget *scale;
   GstElement *cd;
   GstPad *pad;
   GstFormat fmt = GST_FORMAT_TIME;
@@ -256,14 +256,13 @@ cb_set_time (gpointer data)
   if (seeking)
     return TRUE;
 
-  scale = glade_xml_get_widget (glade, "seek_scale");
   cd = gst_bin_get_by_name_recurse_up (GST_BIN (pipeline), "cd-source");
   pad = gst_element_get_pad (cd, "src");
 
   if (gst_pad_query (pad, GST_QUERY_TOTAL, &fmt, &len) &&
       gst_pad_query (pad, GST_QUERY_POSITION, &fmt, &pos)) {
     internal_update = TRUE;
-    gtk_range_set_value (GTK_RANGE (scale), (gdouble) pos / len);
+    gtk_range_set_value (GTK_RANGE (seek_scale), (gdouble) pos / len);
     set_statusbar_pos (pos / GST_SECOND, len / GST_SECOND);
     slen = len;
     internal_update = FALSE;
@@ -287,20 +286,12 @@ cb_change_button (gpointer data)
 static gboolean
 idle_state (gpointer data)
 {
-  static GtkWidget *seek = NULL, *volume = NULL, *status, *play;
   gint transition = GPOINTER_TO_INT (data);
-
-  if (seek == NULL || volume == NULL) {
-    seek = glade_xml_get_widget (glade, "seek_scale");
-    volume = glade_xml_get_widget (glade, "volume_button");
-    status = glade_xml_get_widget (glade, "status_bar");
-    play = glade_xml_get_widget (glade, "play_button");
-  }
 
   if (transition == GST_STATE_READY_TO_PAUSED) {
     char *title;
-    gtk_widget_show (seek);
-    gtk_widget_show (volume);
+    gtk_widget_show (seek_scale);
+    gtk_widget_show (volume_button);
     gtk_list_store_set (track_store, &current_iter,
         COLUMN_STATE, STATE_PLAYING, -1);
     gtk_tree_model_get (GTK_TREE_MODEL (track_store),
@@ -308,16 +299,16 @@ idle_state (gpointer data)
     sj_main_set_title (title);
     g_free (title);
   } else if (transition == GST_STATE_PAUSED_TO_READY) {
-    gtk_widget_hide (seek);
-    gtk_widget_hide (volume);
-    gtk_statusbar_pop (GTK_STATUSBAR (status), 0);
+    gtk_widget_hide (seek_scale);
+    gtk_widget_hide (volume_button);
+    gtk_statusbar_pop (GTK_STATUSBAR (statusbar), 0);
     slen = GST_CLOCK_TIME_NONE;
     gtk_list_store_set (track_store, &current_iter,
         COLUMN_STATE, STATE_IDLE, -1);
     sj_main_set_title (NULL);
     current_track = -1;
   } else if (transition == GST_STATE_PAUSED_TO_PLAYING) {
-    gtk_button_set_label (GTK_BUTTON (play), GTK_STOCK_MEDIA_PAUSE);
+    gtk_button_set_label (GTK_BUTTON (play_button), GTK_STOCK_MEDIA_PAUSE);
     id = g_timeout_add (100, (GSourceFunc) cb_set_time, NULL);
     if (button_change_id) {
       g_source_remove (button_change_id);
@@ -330,7 +321,7 @@ idle_state (gpointer data)
     }
     /* otherwise button flickers on track-switch */
     button_change_id =
-        g_timeout_add (500, (GSourceFunc) cb_change_button, play);
+        g_timeout_add (500, (GSourceFunc) cb_change_button, play_button);
   }
 
   /* once */
@@ -439,6 +430,10 @@ on_play_activate (GtkWidget *button, gpointer user_data)
           &current_iter, COLUMN_TITLE, &title, -1);
       sj_main_set_title (title);
       g_free (title);
+
+      gtk_widget_set_sensitive (next_menuitem, TRUE);
+      gtk_widget_set_sensitive (prev_menuitem, TRUE);
+
       play ();
     }
     else
@@ -598,7 +593,6 @@ on_seek_press (GtkWidget * scale, GdkEventButton * event, gpointer user_data)
 void
 on_seek_moved (GtkWidget * scale, gpointer user_data)
 {
-  GtkWidget *s = glade_xml_get_widget (glade, "status_bar");
   gdouble val = gtk_range_get_value (GTK_RANGE (scale));
   gchar *x, *m;
 
@@ -608,7 +602,7 @@ on_seek_moved (GtkWidget * scale, gpointer user_data)
   x = get_label_for_time (slen * val / GST_SECOND);
   m = g_strdup_printf (_("Seeking to %s"), x);
   g_free (x);
-  gtk_statusbar_push (GTK_STATUSBAR (s), 0, m);
+  gtk_statusbar_push (GTK_STATUSBAR (statusbar), 0, m);
   g_free (m);
 }
 
@@ -626,4 +620,15 @@ on_seek_release (GtkWidget * scale, GdkEventButton * event, gpointer user_data)
           GST_SEEK_METHOD_SET, slen * val));
 
   return FALSE;
+}
+
+void
+sj_play_init (void)
+{
+  play_button = glade_xml_get_widget (glade, "play_button");
+  next_menuitem = glade_xml_get_widget (glade, "next_track_menuitem");
+  prev_menuitem = glade_xml_get_widget (glade, "previous_track_menuitem");
+  seek_scale = glade_xml_get_widget (glade, "seek_scale");
+  volume_button = glade_xml_get_widget (glade, "volume_button");
+  statusbar = glade_xml_get_widget (glade, "status_bar");
 }
