@@ -26,6 +26,8 @@
 #include <gtk/gtkwidget.h>
 #include "sj-structures.h"
 
+void sj_play_init (void);
+
 void	stop_playback	(void);
 void   on_tracklist_row_activate (GtkTreeView * treeview, GtkTreePath * path,
                    GtkTreeViewColumn * col, gpointer user_data);
