@@ -1,3 +1,11 @@
+2005-08-03  Ross Burton  <ross@burtonini.com>
+
+	* data/sound-juicer.glade:
+	* src/sj-main.c:
+	* src/sj-play.[ch]:
+	Disable Next and Prev when SJ is not playing (based on a patch by
+	Raj M Madhan).
+
 2005-08-01  Ross Burton  <ross@burtonini.com>
 
 	* data/sound-juicer.glade:
